Add bar chart / pie chart and data table for Alert rule dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1098,6 +1098,15 @@ html[data-theme='dark'] {
           }
           .title {
             color: var(--primaryContentHeader);
+            margin-bottom: 10px;
+          }
+          .severity-level {
+            display: block;
+            color: #fff;
+            width: 90px;
+            padding: 2px;
+            border-radius: 10px;
+            text-align: center;
           }
           ul {
             font-size: 15px;
