Finish the display for Threats charts in Alert dialog alert rule.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1100,6 +1100,23 @@ html[data-theme='dark'] {
             color: var(--primaryContentHeader);
             margin-bottom: 10px;
           }
+          .chart-btn {
+            margin-bottom: 5px;
+          }
+          .chart-group {
+            border: 1px solid var(--primaryBorder);
+            thead {
+              border-top: none;
+            }
+          }
+          .chart-content {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+            .chart-group {
+              width: 48%;
+            }
+          }
           .severity-level {
             display: block;
             color: #fff;
