Complete Mui datatable conversion for Events Syslog page.

--- a/less/app.less
+++ b/less/app.less
@@ -202,11 +202,6 @@ button.standard:hover:not([disabled]) {
   background-color: var(--primaryContentBackground);
   border: 1px solid var(--primaryBorder);
 }
-.MuiPopover-paper {
-  .MuiIconButton-root:hover {
-    color: #fff;
-  }
-}
 .c-popover {
   color: var(--primaryTextColor) !important;
   background-color: var(--primaryContentBackground) !important;
@@ -572,6 +567,12 @@ button.standard:hover:not([disabled]) {
   .mui-data-table {
     background-color: var(--primaryContentBackground);
     color: #fff;
+  }
+  .MuiToolbar-root,
+  .MuiTablePagination-actions {
+    button:hover {
+      color: #fff;
+    }
   }
   .react-grid-layout {
     background-color: var(--primaryBackground);
