--- a/less/app.less
+++ b/less/app.less
@@ -2178,6 +2178,12 @@ button.standard:hover:not([disabled]) {
               text-align: left;
               &.full {
                 width: 100%;
+                &.relatedList {
+                  color: var(--primaryTextColor);
+                  border: 1px solid var(--formInputBorderColor);
+                  background-color: var(--formBackground);
+                  width: 100%;
+                }
               }
               &.multi {
                 label {
@@ -2322,6 +2328,7 @@ button.standard:hover:not([disabled]) {
             .relatedList {
               width: 100%;
             }
+
           }
           .steps-indicator { //For Config Topology Inventory page
             display: flex;
@@ -3254,6 +3261,8 @@ button.standard:hover:not([disabled]) {
     }
   }
 }
+
+
 
 .incident-statistics {
   display: flex;
