Adjust chart height for Alert details dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1116,6 +1116,10 @@ html[data-theme='dark'] {
             thead {
               border-top: none;
             }
+            &.table {
+              height: 215px;
+              overflow-y: auto;
+            }
           }
           .chart-content {
             display: flex;
