Add connections status icon for Host and Config Topology Inventory page.

--- a/less/app.less
+++ b/less/app.less
@@ -558,7 +558,7 @@ button.standard:hover:not([disabled]) {
       margin: 5px 0;
     }
   }
-  .ip-edge {
+  .connections-status {
     float: left;
     margin-right: 5px;
   }
