Fix floor map tree default selected issue. Fix Alert topology issue when navigate previous/next page.

--- a/less/app.less
+++ b/less/app.less
@@ -2800,6 +2800,14 @@ button.standard:hover:not([disabled]) {
               .flex-item {
                 display: flex;
                 flex-wrap: wrap;
+                .item {
+                  font-size: 15px;
+                  color: #fff;
+                  padding: 5px 10px;
+                  margin: 5px 2px;
+                  border-radius: 5px;
+                  background-color: var(--primaryContentHeader);
+                }
               }
               span {
                 a {
