Fix formValidations reset issues for Syslog and Inventory. Fix buttons actions logic for Floor map. Various logic fix.

--- a/less/app.less
+++ b/less/app.less
@@ -170,6 +170,10 @@ button.standard:hover:not([disabled]) {
     border: none !important;
   }
 }
+.MuiSwitch-track,
+.MuiSwitch-colorPrimary.Mui-disabled + .MuiSwitch-track {
+  background-color: var(--dashboardMapsText) !important;
+}
 .MuiAutocomplete-root {
   .MuiIconButton-root:hover {
     background: none;
