--- a/less/modal.less
+++ b/less/modal.less
@@ -624,6 +624,9 @@ html[data-theme='dark'] {
           max-height: 485px;
           margin-top: 20px;
         }
+        [class*='timestamp'] {
+          width: 170px;
+        }
         ._EventCode {
           width: 100px;
         }
