Convert Material UI table for Config Service Status page.

--- a/less/app.less
+++ b/less/app.less
@@ -531,6 +531,16 @@ button.standard:hover:not([disabled]) {
     background-color: var(--buttonSelectedHover);
   }
 }
+.MuiTable-root {
+  thead th.MuiTableCell-head {
+    button.MuiButtonBase-root {
+      font-size: 1em;
+      font-weight: bold;
+      line-height: 1.5rem;
+      background: none !important;
+    }
+  }
+}
 .MuiTableBody-root {
   .grey {
     background-color: var(--tableActiveRow) !important;
