Add IDs for Threats page and its related components.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1143,7 +1143,7 @@ html[data-theme='dark'] {
             li {
               margin-bottom: .5em;
             }
-            span {
+            span.header {
               color: var(--primaryContentHeader);
             }
             background: none !important;
