Minor code updates.

--- a/less/app.less
+++ b/less/app.less
@@ -3026,6 +3026,9 @@ button.standard:hover:not([disabled]) {
           .path-input {
             width: 297px;
           }
+          .form-group .radio-group {
+            margin: 10px 0 -10px 5px;
+          }
         }
       }
     }
