--- a/less/modal.less
+++ b/less/modal.less
@@ -740,9 +740,15 @@ html[data-theme='dark'] {
                     display: inline-block;
                     cursor: pointer;
                   }
+                  ul {
+                    color: var(--primaryTextColor);
+                  }
                   li span {
                     padding-left: 0;
                     cursor: default;
+                    &.blue-color {
+                      color: var(--primaryContentHeader);
+                    }
                   }
                   li a {
                     font-weight: bold;
@@ -770,7 +776,7 @@ html[data-theme='dark'] {
                   ul {
                     width: 20%;
                     padding: 10px;
-                    li span {
+                    li span.blue-color {
                       color: var(--primaryContentHeader);
                     }
                     &.no-padding {
