Fix the HMD Process Monitor Signature list.

--- a/less/modal.less
+++ b/less/modal.less
@@ -782,7 +782,14 @@ html[data-theme='dark'] {
                     &.no-padding {
                       width: 100%;
                       padding: 0;
-                    } 
+                    }
+                    &.signature-list {
+                      width: 100%;
+                      padding: 0 10px;
+                      &.padding {
+                        margin-bottom: 5px;
+                      }
+                    }
                   }
                 }
                 i.fg {
