Update checkbox options for Yara Rules dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1922,9 +1922,11 @@ html[data-theme='dark'] {
 #yaraRuleDialog-content {
   max-height: 500px;
   width: 600px;
-  .radio-group {
+  .group.checkbox {
+    display: flex;
     flex-direction: row;
-    margin: 10px 0;
+    flex-wrap: wrap;
+    margin-top: 10px;
   }
   .list-item {
     margin: 0;
