Fix display of topology info in Alert Dialog. Minor other fix for v2.0 release.

--- a/less/app.less
+++ b/less/app.less
@@ -1302,8 +1302,8 @@ button.standard:hover:not([disabled]) {
         }
         .csv-btn {
           position: absolute;
-          top: 10px;
-          right: 45px;
+          top: 0;
+          right: 10px;
         }
         span.loading {
           display: block;
@@ -1345,9 +1345,10 @@ button.standard:hover:not([disabled]) {
         }
       }
       .content {
-        overflow-y: auto;
+        position: relative;
         max-height: 84vh;
         padding-right: 10px;
+        overflow-y: auto;
       }
       .expand-collapse {
         position: absolute;
