Implement seat and ipdevice search APIs for floor map.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1302,6 +1302,9 @@ html[data-theme='dark'] {
       border-radius: 5px;
     }
   }
+  .assigned-device {
+    margin-bottom: 10px;
+  }
 }
 #departmentTitleDialog-content,
 #showSshAccountDialog-content {
