Add FTP upload fields for HMD Settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -2212,6 +2212,15 @@ button.standard:hover:not([disabled]) {
               margin: 5px 0;
               padding: 5px;
               text-align: left;
+              .full-field {
+                width: 100%;
+              }
+              .connections-check {
+                margin-top: 4px;
+                margin-right: 10px;
+                margin-left: 10px;
+                padding: 6px 16px;
+              }
               &.full {
                 width: 100%;
                 &.relatedList {
@@ -3021,7 +3030,6 @@ button.standard:hover:not([disabled]) {
           }
         }
         .hmd-settings {
-          height: 70vh;
           overflow-y: auto;
           .path-input {
             width: 297px;
