Continue work on the logic change for Inventory Map page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1283,8 +1283,9 @@ html[data-theme='dark'] {
   }
 }
 /* configuration/topology/inventory */
-/* configuration/topology/map */
 #configSeatDialog-content {
+  width: 300px;
+  max-width: 300px;
   .main {
     font-size: 16px;
     color: var(--linkColor);
@@ -1296,6 +1297,7 @@ html[data-theme='dark'] {
   .inventory {
     margin: 15px 0;
     i {
+      font-size: 26px;
       padding: 2px;
       margin: 0 2px;
       border: 1px solid var(--primaryBorder);
