Complete the Config Topology Inventory device logic updates.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1294,6 +1294,14 @@ html[data-theme='dark'] {
       margin-bottom: 2px;
     }
   }
+  .info {
+    clear: both;
+    span {
+      float: left;
+      margin-bottom: 1px;
+      margin-right: 5px;
+    }
+  }
   .inventory {
     margin: 15px 0;
     i {
