Add the 'Download Logs' and 'Compress Logs' button in HMD settings dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -842,6 +842,12 @@ html[data-theme='dark'] {
         .edit-btns {
           right: 10px;
         }
+        .compress {
+          right: 80px;
+        }
+        .download {
+          right: 162px;
+        }
         .edit-btns {
           .cancel,
           .save,
