Minor updates for CSV export button logic.

--- a/less/app.less
+++ b/less/app.less
@@ -399,6 +399,9 @@ button.standard:hover:not([disabled]) {
       li {
         padding: 2px 15px;
       }
+      .list-text {
+        margin-right: 20px;
+      }
     }
   }
 }
