Start the task for adding Safety Scan tab for Host page.

--- a/less/app.less
+++ b/less/app.less
@@ -1885,6 +1885,9 @@ button.standard:hover:not([disabled]) {
           padding-top: 4px;
         }
         &.host {
+          .safety-scan-type {
+            margin: 15px 20px 10px 20px;
+          }
           ul.host-list {
             & > li {
               min-height: 100px;
