--- a/less/modal.less
+++ b/less/modal.less
@@ -1287,6 +1287,20 @@ html[data-theme='dark'] {
       }
     }
   }
+  .content {
+    .header.trigger {
+      float: left;
+      margin-right: 20px;
+      font-size: 20px;
+      color: var(--primaryContentHeader);
+      margin-bottom: 15px;
+    }
+    .trigger-text {
+      float: left;
+      font-size: 14px;
+      margin-top: 5px;
+    }
+  }
 }
 /* configuration/topology/inventory */
 #configSeatDialog-content {
