Continue work on the details content of the Host Safety Scan tab.

--- a/less/app.less
+++ b/less/app.less
@@ -2049,7 +2049,9 @@ button.standard:hover:not([disabled]) {
                   }
                   span.success,
                   span.fail,
-                  span.medium {
+                  span.high,
+                  span.medium,
+                  span.low {
                     font-size: .1em;
                     font-weight: bold;
                     padding: 3px 5px;
@@ -2065,9 +2067,17 @@ button.standard:hover:not([disabled]) {
                     color: #e15b6b;
                     border: 1px solid #e15b6b;
                   }
+                  span.high {
+                    color: #CC2943;
+                    border: 1px solid #CC2943;
+                  }
                   span.medium {
-                    color: #f57c00;
-                    border: 1px solid #f57c00;
+                    color: #CC7B29;
+                    border: 1px solid #CC7B29;
+                  }
+                  span.low {
+                    color: #29CC7A;
+                    border: 1px solid #29CC7A;
                   }
                 }
               }
