Complete APIs implementations for Safety Scan tab in Host page.

--- a/less/app.less
+++ b/less/app.less
@@ -1944,6 +1944,14 @@ button.standard:hover:not([disabled]) {
                 border-radius: 15px;
                 cursor: pointer;
               }
+              .host-count {
+                float: right;
+                font-size: .9em;
+                margin-top: 10px;
+                margin-right: 15px;
+                border-left: 1px solid var(--primaryBorder);
+                padding-left: 10px;
+              }
             }
           }
           ul.host-list {
