--- a/less/modal.less
+++ b/less/modal.less
@@ -1285,6 +1285,11 @@ html[data-theme='dark'] {
         }
       }
     }
+    .host-count {
+      float: right;
+      font-weight: normal;
+      margin-right: 10px;
+    }
   }
   .scan-info .info-content {
     .table {
