Various fix for SCP HMD dialog. Add view details for Host Safety Scan tab dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1338,6 +1338,9 @@ html[data-theme='dark'] {
           &:nth-child(odd) {
             width: 200px;
           }
+          .fg-eye {
+            cursor: pointer;
+          }
         }
         ul.signature-list {
           padding: 0 10px;
