Add delete task service, retrigger task service and lazy loading (pagination) for Threats CSV export.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2068,3 +2068,37 @@ html[data-theme='dark'] {
 #privilegeAddDialog-content  {
  overflow: hidden; 
 }
+#csvDownloadContent {
+  .content {
+    min-width: 182px;
+    .header {
+      font-size: 14px;
+      padding: 0 10px 10px 10px;
+      border-bottom: 1px solid var(--primaryBorder);
+      span {
+        font-size: 16px;
+        font-weight: bold;
+        color: var(--formEmailGroup);
+        margin-right: 10px;
+      }
+    }
+    .scheduled-list {
+      .service-list {
+        height: 380px;
+        li {
+          padding: 2px 15px;
+        }
+        .list-text {
+          margin-right: 20px;
+        }
+        .delete-icon {
+          margin: 0 5px;
+          cursor: pointer;
+        }
+        .refresh-icon {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
