Update API logic for Host Safety Scan dialog. Style updates for Threats CSV export dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2070,7 +2070,7 @@ html[data-theme='dark'] {
 }
 #csvDownloadContent {
   .content {
-    min-width: 182px;
+    width: 325px;
     .header {
       font-size: 14px;
       padding: 0 10px 10px 10px;
@@ -2084,19 +2084,15 @@ html[data-theme='dark'] {
     }
     .scheduled-list {
       .service-list {
-        height: 380px;
+        height: 310px;
         li {
           padding: 2px 15px;
         }
         .list-text {
-          margin-right: 20px;
+          flex: 0 0 200px;
         }
         .delete-icon {
           margin: 0 10px;
-          cursor: pointer;
-        }
-        .refresh-icon {
-          cursor: pointer;
         }
       }
     }
