Minor updates for display of Host Safety Scan tab.

--- a/less/modal.less
+++ b/less/modal.less
@@ -715,6 +715,7 @@ html[data-theme='dark'] {
                 cursor: auto;
               }
               .product-count {
+                color: #fff;
                 padding: 0 5px;
                 border-radius: 5px;
                 background-color: #b1b1b1;
