Add loading icon for floor map in Inventory step and host device map.

--- a/less/app.less
+++ b/less/app.less
@@ -2085,6 +2085,14 @@ button.standard:hover:not([disabled]) {
             .floor-map-area {
               margin-top: 60px;
             }
+            span.loading {
+              display: block;
+              text-align: center;
+              margin-top: 160px;
+              .fg-loading-2 {
+                font-size: 30px;
+              }
+            }
           }
         }
         &.basic-form { //For content with form input
@@ -2245,6 +2253,14 @@ button.standard:hover:not([disabled]) {
                   width: 80%;
                   .c-gis {
                     min-height: 450px;
+                  }
+                  span.loading {
+                    display: block;
+                    text-align: center;
+                    margin-top: 160px;
+                    .fg-loading-2 {
+                      font-size: 30px;
+                    }
                   }
                 }
               }
