Add global loading icon in last step of adding IP device.

--- a/less/app.less
+++ b/less/app.less
@@ -379,6 +379,15 @@ button.standard:hover:not([disabled]) {
     }
   }
 }
+#g-progress-container {
+  #overlay {
+    opacity: 0.2;
+  }
+  .fg-loading-2 {
+    font-size: 1.8em;
+    margin: 10px;
+  }
+}
 #g-header { //Top nav menu
   color: #fff;
   padding: 0 15px;
