update lib for sortTree

--- a/less/modal.less
+++ b/less/modal.less
@@ -1994,6 +1994,14 @@ html[data-theme='dark'] {
     }
   }
 }
+#addUnitDialog-content {
+  width: 900px;
+  height: 620px;
+  overflow: hidden;
+  span{
+    color:#0f0f0f;
+  }
+}
 #yaraRuleDialog-content {
   max-height: 500px;
   width: 600px;
