Continue work on the Config auto settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -1541,9 +1541,15 @@ button.standard:hover:not([disabled]) {
           margin-left: 0;
         }
         .group-content.edge {
+          position: relative;
           padding: 5px;
           margin-right: 5px;
           border: 1px solid var(--primaryBorder);
+          .network-test {
+            position: absolute;
+            top: 50px;
+            right: -97px;
+          }
         }
         .target,
         .switch {
