Complete the multi-input logic for auto settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -1536,6 +1536,11 @@ button.standard:hover:not([disabled]) {
       }
     }
     .auto-settings {
+      .generate-topo {
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
       #autoSettingsEdge {
         #scannerLabel span {
           margin-left: 0;
